fix old on iOS

--- a/src/components/SegmentedControl.module.css
+++ b/src/components/SegmentedControl.module.css
@@ -41,4 +41,5 @@
 }
 .text {
   position: relative;
+  z-index: 1;
 }
